--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="container grid">
           <header>
             <h2 class="title">Serviços</h2>
-            <p>
+            <p class="subtitle">
               Lorem ipsum dolor sit amet consectetur,
               <strong>adipisicing</strong> elit. Vero, reiciendis. Deleniti
               atque, earum ea, incidunt rem fugit dolorum et placeat praesentium
@@ -264,7 +264,7 @@
     <footer class="section">
       <div class="container grid">
         <div class="brand">
-          <a class="logo logo-alt" href="#home">beauty<span>salon.</span></a>
+          <a class="logo logo-alt" href="#home">beauty<span>salon</span>.</a>
           <p>©2021 Beautysalon.</p>
           <p>Todos os direitos reservados.</p>
         </div>
@@ -286,7 +286,7 @@
       <!--container/grid-->
     </footer>
 
-    <a href="#home" class="back-to-top show"><i class="icon-chevron-up"></i></a>
+    <a href="#home" class="back-to-top"><i class="icon-chevron-up"></i></a>
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
