--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--Body é tudo o que o suer vê-->
     <header id="header">
       <nav class="container">
-        <a class="logo" href="#">beauty<span>salon.</span></a
+        <a class="logo" href="#">RW<span>Informática</span></a
         ><!--logo-->
         <div class="menu">
           <ul class="grid">
@@ -42,6 +42,16 @@
         <div class="toggle icon-close"></div>
         <!--icon-close-->
       </nav>
+      <div class="grid interruptor">
+        <label class="switch">
+          <input type="checkbox" />
+          <span class="slider round"></span>
+        </label>
+        <label class="switch">
+          <input type="checkbox" />
+          <span class="slider round"></span>
+        </label>
+      </div>
       <!--container-->
     </header>
     <!--Header-->
@@ -52,18 +62,18 @@
           <div class="image">
             <img
               src="Img/photo1.jpg"
-              alt="Moça sorrindo penteando e secando outra moça."
+              alt="Comercio entre duas pessoas."
             /><!--Alt serve para pessoas com deficiencia-->
           </div>
           <!--Image-->
           <div class="text">
-            <h2 class="title">Saúde natural para os seus cabelos</h2>
+            <h2 class="title">Sistema Ictus</h2>
             <!--title-->
             <p>
-              Um salão exclusivo em São Paulo, especializado em tratamentos
-              naturais.
+              Sofware ERP ideal para gerenciamento empresarial. Focado na
+              produtividade e melhora do seu dia a dia de trabalho.
             </p>
-            <a class="button" href="#">Agendar um horário</a
+            <a class="button" href="#">Quero saber mais</a
             ><!--button-->
           </div>
           <!--text-->
@@ -127,25 +137,25 @@
           </header>
           <div class="cards grid">
             <div class="card">
-              <i class="icon-woman-hair"></i
+              <i class="icon-display"></i
               ><!--A tag I geralmente é usada para icones ele não epxlicou o porque (google)-->
-              <h3 class="title">Terapia Capilar</h3>
+              <h3 class="title">Sistemas</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
                 distinctio iste
               </p>
             </div>
             <div class="card">
-              <i class="icon-trim"></i>
-              <h3 class="title">Cortes</h3>
+              <i class="icon-database"></i>
+              <h3 class="title">Infraestrutura de rede</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                 Commodi consequatur in eligendi
               </p>
             </div>
             <div class="card">
-              <i class="icon-cosmetic"></i>
-              <h3 class="title">Tratamentos</h3>
+              <i class="icon-key"></i>
+              <h3 class="title">Certificado Digital</h3>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Inventore sapiente incidunt.
@@ -162,7 +172,7 @@
       <section class="section" id="testimonials">
         <div class="container">
           <header>
-            <h2 class="title">Depoimentos de quem já passou por aqui</h2>
+            <h2 class="title">Depoimentos de clientes</h2>
           </header>
           <div class="testimonials swiper-container">
             <div class="swiper-wrapper">
@@ -177,8 +187,8 @@
                     suscipit sit ducimus, cum
                   </p>
                   <cite>
-                    <img src="Img/User3.jpg" alt="Foto de Kaue Padilha" />
-                    Kaue Padilha
+                    <img src="Img/User1.png" alt="Logo eletrica Moro" />
+                    Elétrica Moro
                   </cite>
                 </blockquote>
               </div>
@@ -194,8 +204,8 @@
                     suscipit sit ducimus, cum
                   </p>
                   <cite>
-                    <img src="Img/User1.jpg" alt="Foto de Kaue Silva" />
-                    Kaue Silva
+                    <img src="Img/User2.png" alt="Logo Equiperol Rolamentos" />
+                    Equiperol Rolamentos
                   </cite>
                 </blockquote>
               </div>
@@ -211,8 +221,8 @@
                     suscipit sit ducimus, cum
                   </p>
                   <cite>
-                    <img src="Img/User2.jpg" alt="Foto de Kaue Afonso" />
-                    Kaue Afonso
+                    <img src="Img/User3.png" alt="Logo Madelider" />
+                    Madelider
                   </cite>
                 </blockquote>
               </div>
@@ -235,7 +245,7 @@
               omnis exercitationem suscipit, enim sed id adipisci.
             </p>
             <a
-              href="https://api.whatsapp.com/send?phone=5551983589774&text=Chamaaa"
+              href="https://api.whatsapp.com/send?phone=5551998998047&text=Olá"
               class="button"
               target="_blank"
               ><!--target="_blank" abre uma guia nova--><i
@@ -247,10 +257,12 @@
 
           <div class="links">
             <ul class="grid">
-              <li><i class="icon-phone"></i>51 99735-1363</li>
-              <li><i class="icon-map-pin"></i>R. Amauri Souza, 346</li>
+              <li><i class="icon-phone"></i>51 99899-8047</li>
               <li>
-                <i class="icon-mail"></i>rwinformatica@rwwwinformaticati.com.br
+                <i class="icon-map-pin"></i>R. Júlio de Castilhos, 251 - Centro
+              </li>
+              <li>
+                <i class="icon-mail"></i>rwinformatica@rwinformaticati.com.br
               </li>
             </ul>
           </div>
@@ -264,14 +276,14 @@
     <footer class="section">
       <div class="container grid">
         <div class="brand">
-          <a class="logo logo-alt" href="#home">beauty<span>salon</span>.</a>
-          <p>©2021 Beautysalon.</p>
+          <a class="logo logo-alt" href="#home">RW<span>Informática</span></a>
+          <p>©2021 RwInformática.</p>
           <p>Todos os direitos reservados.</p>
         </div>
         <!--brand-->
 
         <div class="social">
-          <a href="https://www.instagram.com" target="_blank"
+          <a href="https://www.instagram.com/rwinformaticati/" target="_blank"
             ><i class="icon-instagram"></i
           ></a>
           <a href="https://pt-br.facebook.com" target="_blank"
