--- a/index.html
+++ b/index.html
@@ -26,32 +26,30 @@
       <nav class="container">
         <a class="logo" href="#">RW<span>Informática</span></a
         ><!--logo-->
-        <div class="menu">
-          <ul class="grid">
-            <li><a class="title" href="#home">Início</a></li>
-            <!--Quando colocamos uma # estamos ancorando na pagina principal, no caso busgando uma home na pagina porincipal-->
-            <li><a class="title" href="#about">Sobre</a></li>
-            <li><a class="title" href="#services">Serviços</a></li>
-            <li><a class="title" href="#testimonials">Depoimentos</a></li>
-            <li><a class="title" href="#contact">Contato</a></li>
-          </ul>
+        <div class="flex">
+          <div class="menu">
+            <ul class="grid">
+              <li><a class="title" href="#home">Início</a></li>
+              <!--Quando colocamos uma # estamos ancorando na pagina principal, no caso busgando uma home na pagina porincipal-->
+              <li><a class="title" href="#about">Sobre</a></li>
+              <li><a class="title" href="#services">Serviços</a></li>
+              <li><a class="title" href="#testimonials">Depoimentos</a></li>
+              <li><a class="title" href="#contact">Contato</a></li>
+            </ul>
+          </div>
+          <!--menu-->
+          <div class="toggle icon-menu"></div>
+          <!--icon-menu-->
+          <div class="toggle icon-close"></div>
+          <!--icon-close-->
+          <div class="grid interruptor">
+            <label class="switch">
+              <input type="checkbox" />
+              <span class="slider round"></span>
+            </label>
+          </div>
         </div>
-        <!--menu-->
-        <div class="toggle icon-menu"></div>
-        <!--icon-menu-->
-        <div class="toggle icon-close"></div>
-        <!--icon-close-->
       </nav>
-      <div class="grid interruptor">
-        <label class="switch">
-          <input type="checkbox" />
-          <span class="slider round"></span>
-        </label>
-        <label class="switch">
-          <input type="checkbox" />
-          <span class="slider round"></span>
-        </label>
-      </div>
       <!--container-->
     </header>
     <!--Header-->
