--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
               <li><a class="title" href="#services">Serviços</a></li>
               <li><a class="title" href="#testimonials">Depoimentos</a></li>
               <li><a class="title" href="#contact">Contato</a></li>
+              <label class="switch">
+                <input type="checkbox" onclick="chageColor()" />
+                <span class="slider round"></span>
+              </label>
             </ul>
           </div>
           <!--menu-->
@@ -42,12 +46,7 @@
           <!--icon-menu-->
           <div class="toggle icon-close"></div>
           <!--icon-close-->
-          <div class="grid interruptor">
-            <label class="switch">
-              <input type="checkbox" />
-              <span class="slider round"></span>
-            </label>
-          </div>
+          <div class="grid interruptor"></div>
         </div>
       </nav>
       <!--container-->
